Update cli/src/main/java/com/devonfw/tools/ide/context/AbstractIdeContext.java